# libmicrohttpd-cmake

./: .cproject  .project  LICENSE  MHD_config_cmake.h.in  README.md
cmake/: DetermineSystemExtension.cmake  FindNSS.cmake
libmicrohttpd/: CMakeLists.txt
libmicrohttpd/cmake/: DetermineFork.cmake  DetermineStdCHeaders.cmake  DetermineSystemExtension.cmake  DetermineTargetEndianess.cmake  FindLibGCrypt.cmake  FindLibMagic.cmake  FindNSS.cmake
libmicrohttpd/doc/doxygen/: CMakeLists.txt  libmicrohttpd.doxy.in
libmicrohttpd/src/examples/: CMakeLists.txt
libmicrohttpd/src/microhttpd/: CMakeLists.txt
libmicrohttpd/src/testcurl/: CMakeLists.txt
libmicrohttpd/src/testcurl/https/: CMakeLists.txt
libmicrohttpd/src/testzzuf/: CMakeLists.txt
